try to fix openshift problem

--- a/public/assignment/css/Style.css
+++ b/public/assignment/css/Style.css
@@ -5,6 +5,11 @@ body{
 .navbar-brand{
     font-size:30px;
 }
+
+.navbar-fixed-top {
+    border: 0;
+}
+
 @media (min-width: 768px) {
     .sidebar{
         position: fixed;
@@ -27,6 +32,10 @@ body{
         width: 25%;
         float: left;
     }
+    .sidebar>ul>li>a{
+        font-size: 90%;
+        padding-left: 10px;
+    }
     .main{
         padding-left: 0px;
         padding-right:0px;
@@ -37,12 +46,6 @@ body{
     }
     .main>h3{
         font-size:20px;
-    }
-}
-@media (max-width: 630px){
-    .sidebar>ul>li>a{
-        font-size: 90%;
-        padding-left: 10px;
     }
 }
 .nav-sidebar{
